# LFISuite

./: lfisuite.py  pathtotest.txt  pyproject.toml
