[tool.poetry]
name = "lfisuite"
version = "0.1.0"
description = ""
authors = ["Joaquin Pochat <joaquin.pochat@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
